--- a/reference.html
+++ b/reference.html
@@ -37,7 +37,7 @@
   <dt><h4>DOM</h4> </dt>
   <dd>The DOM, or <b>Document Object Model</b>, is a representation of documents like HTML. The DOM can be thought of as an outline where tags are represented by &ldquo;nodes.&rdquo; Scripting languages like JavaScript reference the DOM when accessing or modifying page content. </dd>
   <dt><h4>Elements</h4> </dt>
-  <dd>HTML elements consist of an HTML tag, used to identify the content, and the content itself. Is often used interchangeably with the term tags although technically tags only refer to the tag itself. </dd>
+  <dd>HTML elements consist of an HTML tag, used to identify the content, and the content itself. Is often used interchangeably with the term &ldquo;tags&rdquo;  although technically &ldquo;tags&rdquo; only refer to the tag itself. </dd>
   <dt><h4>FTP</h4></dt>
   <dd>FTP stands for <b>File Transfer Protocol</b>. It&rsquo;s a common protocol used for transferring large files from one server to another. </dd>
   <dt><h4>HTTP</h4> </dt>
@@ -70,7 +70,7 @@
     <th scope="col">Entity </th>
   </tr>
   <tr>
-    <td class="center"> </td>
+    <td class="center">" " </td>
     <td>double quotation mark</td>
     <td><b>&amp;quot;</b></td>
   </tr>
