--- a/next.html
+++ b/next.html
@@ -25,22 +25,34 @@
 <p><br><b><i>Never stop learning.</i></b></br>
   The web is constantly evolving. Even if you become the absolute best there is in a specific field, chances are new techniques and approaches will come along within the year that will make your current skill set less desirable. Understand that being a good web designer means embracing the changing nature of the web.</p>
 <p><br><b><i>Break things!</i></b></br>
-  There is no better teacher than experience. Build and experiment constantly. Ask yourself, &ldquo;what would happen if I?...&rdquo; or &ldquo;wonder if I could build?...&rdquo; and then go out and build it. If you&rsquo;re like me, you&rsquo;ll fail a good bit of the time, but the process of trying things and breaking them will make you that much better. Always challenge yourself.</p>
+  There is no better teacher than experience. Build and experiment constantly. Ask yourself, <i>&ldquo;what would happen if I?...&rdquo;</i> or <i>&ldquo;wonder if I could build?...&rdquo;</i> and then go out and build it. If you&rsquo;re like me, you&rsquo;ll fail a good bit of the time, but the process of trying things and breaking them will make you that much better. <em><b>Always challenge yourself.</b></em></p>
 <h1>Web Design Resources</h1>
-<p>HTML related titles</p>
-<p>Web Design related titles</p>
-<p>HTML specifications </p>
-<p>Although their format can be a bit hard to read initially, once you&rsquo;re familiar with them there is no better resource for learning HTML and staying current with it than reading the actual W3C specifications.</p>
-<p>HTML 4.0</p>
-<p>XHTML 1.0</p>
-<p>WHATWG HTML5</p>
-<p>W3C HTML5</p>
-<p>W3C Markup Validation Service </p>
-<p>Great for testing code and making sure you&rsquo;re writing valid HTML syntax.</p>
-<p>Mozilla Developer Network </p>
-<p>One of the best online resources for web designers and developers. Great collection of articles, tutorials, and references.</p>
-<p>HTML5 Rocks </p>
-<p>Once you&rsquo;ve got the basics down, check out sites like HTML5 Rocks. This site feature articles, tutorials, and other resources that help you keep up with the evolving web. </p>
+<ul>
+<li><strong>HTML related titles</strong></li>
+<li><strong>Web Design related titles</strong></li>
+<li><strong>HTML specifications</strong></li>
+</ul>
+
+<p><i>Although their format can be a bit hard to read initially, once you&rsquo;re familiar with them there is no better resource for learning HTML and staying current with it than reading the actual W3C specifications.</i></p>
+
+
+<ul>
+<li><strong>HTML 4.0</strong></li>
+<li><strong>XHTML 1.0</strong></li>
+<li><strong>WHATWG HTML5</strong></li>
+<li><strong>W3C HTML5</strong></li>
+<li><strong>W3C Markup Validation Service</strong></li>
+<p><i>Great for testing code and making sure you&rsquo;re writing valid HTML syntax.</i></p>
+</ul>
+
+
+
+<ul>
+<li><strong>Mozilla Developer Network</strong></li>
+<p><i>One of the best online resources for web designers and developers. Great collection of articles, tutorials, and references.</i></p>
+<li><strong>HTML5 Rocks</strong></li>
+<p><i>Once you&rsquo;ve got the basics down, check out sites like HTML5 Rocks. This site feature articles, tutorials, and other resources that help you keep up with the evolving web. </i></p>
+</ul>
 
 </body>
 </html>
